trunk/NewArchive/0f6908e49e152f50689b8c2c2f275a74-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:57:35: error: ISO C++ forbids declaration of ‘JaimePasJaimeraiQueCelaEvolue’ with no type [-fpermissive]
     JaimePasJaimeraiQueCelaEvolue() : 
                                   ^
main.cpp:59:6: error: declaration of ‘int ActionImmediate::JaimePasJaimeraiQueCelaEvolue()’ [-fpermissive]
     {}
      ^
main.cpp:36:7: error: changes meaning of ‘JaimePasJaimeraiQueCelaEvolue’ from ‘class JaimePasJaimeraiQueCelaEvolue’ [-fpermissive]
 class JaimePasJaimeraiQueCelaEvolue
       ^
main.cpp: In member function ‘int ActionImmediate::JaimePasJaimeraiQueCelaEvolue()’:
main.cpp:58:5: error: only constructors take member initializers
     _text(L"==== J'aime pas ====")
     ^
main.cpp:59:6: warning: no return statement in function returning non-void [-Wreturn-type]
     {}
      ^
